--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -100,52 +100,66 @@
 
 \begin{document}
 
-%%% INTRODUCTION
-
 \chapter*{Introduction}
 \markright{\textsc{Introduction}}
 \addcontentsline{toc}{chapter}{Introduction}
 
-%%% LITERATURE REVIEW
-
 \chapter{Theory}
+\label{chapter:theory}
 
 Theoretical concepts are fundamental to the study of computational chemistry, providing a framework for analyzing molecular structures and properties. This chapter focuses on four key areas of theory, beginning with an overview of molecular structure in Section 1.1. Section 1.2 provides an in-depth examination of chemical file formats, including the advantages and disadvantages of different file formats for storing molecular data. Partial atomic charges are explored in section 1.3, including their importance in the analysis of molecular structures and the various methods used to compute them. Finally, section 1.4 delves into color interpolation, a critical technique for visualizing partial atomic charges in molecular structures.
 
 By providing a comprehensive overview of these theoretical concepts, this chapter aims to provide a strong foundation for the subsequent chapters, which will focus on the implementation and analysis of the Molstar extension for visualizing partial atomic charges in molecular structures.
 
 \section{Molecular structure}
+\label{section:molecular_structure}
 
 Molecular structure refers to the arrangement of atoms and chemical bonds in a molecule. The three main components of molecular structure are atoms, residues, and chains.
 In this section we will look at
 
 \subsection{Atoms}
-Atoms are the basic building blocks of matter. Atoms are composed of protons, neutrons, and electrons. [citations]
+\label{subsection:atoms}
 
-Bonds are the connections between atoms that hold molecules together. There are different types of bonds, e.g. covalent bonds, ionic bonds, and hydrogen bonds. [citations]
+Atoms are the basic building blocks of matter. Atoms are composed of protons, neutrons, and electrons. The number of protons determines the element, while the number of neutrons determines the isotope. The number of electrons determines the charge of the atom. Atoms are the smallest unit of matter that can take part in a chemical reaction.
+
+Bonds are the connections between atoms that hold molecules together. There are different types of bonds, e.g. covalent bonds, ionic bonds, and hydrogen bonds.
 
 \subsection{Residues}
+\label{subsection:residues}
+
 A residue refers to a specific building block that remains after a chemical modification or enzymatic reaction.
 In proteins, residues refer to amino acids, which are connected through peptide bonds to form polypeptide chains.
 Residues are crucial in biochemistry because they determine the structure and function of biological molecules.
 The sequence of residues in a protein or nucleic acid, for instance, determines its three-dimensional structure and ultimately its biological activity.
 
 \subsection{Chains}
+\label{subsection:chains}
+
 Polymer chains (chains) are sequences of residues that are linked together. In the context of biomolecules, chains can be either polypeptide chains in proteins or polynucleotide chains in nucleic acids. The sequence and structure of these chains are crucial for understanding the function and properties of the biomolecules.
 
 \section{Chemical file formats}
+\label{section:chemical_file_formats}
+
 TODO: introduction
 
 \subsection{SDF}
+\label{subsection:sdf}
+
 Structure-data file (SDF) is a widely used chemical file format for representing molecular structures and their associated properties. It is a text-based format that describes the atoms, bonds, and atomic coordinates of a molecule. 
 
 \subsection{MOL2}
+\label{subsection:mol2}
+
 The Mol2 file format is another text-based format for storing molecular structures and their associated properties. It can store multiple conformations of a molecule and is commonly used in molecular modeling and cheminformatics applications. The Mol2 format provides more flexibility and additional features compared to the SDF format, such as support for multiple substructures and atom types.
 
 \subsection{PDB}
+\label{subsection:pdb}
+
 The Protein Data Bank (PDB) file format is a widely used format for storing three-dimensional structures of proteins, nucleic acids, and other macromolecules. PDB files contain information about the atomic coordinates, secondary structure, and other important details required for understanding macromolecular structures. The PDB format has been widely adopted in structural biology, bioinformatics, and related fields.
 
 \subsection{mmCIF}
+\label{subsection:mmcif}
+
 The macromolecular Crystallographic Information File (mmCIF) format is an extension of the CIF format, specifically designed for macromolecular structures.
 It is a text-based format that provides a more comprehensive and flexible representation of macromolecular crystallography data compared to the PDB format.
 One of the most important features of the mmCIF format is its support for data dictionaries.
@@ -155,17 +169,24 @@ In contrast to other formats, the mmCIF format does not impose limits on column 
 TODO: add example image + better explanation
 
 \section{Partial atomic charges}
+\label{section:partial_atomic_charges}
+
 Partial atomic charges are a measure of the distribution of electronic charge within a molecule. These charges are important for understanding and predicting molecular interactions, including hydrogen bonding, electrostatic interactions, and solvation effects.
 
 TODO: visual of electron distribution
 
 \subsection{Calculation methods}
-TODO
+\label{subsection:calculation_methods}
 
 \subsection{ChargeFW2}
+\label{subsection:chargfw2}
+
 \subsection{AlphaCharges}
+\label{subsection:alphacharges}
 
 \section{Color interpolation}
+\label{section:color_interpolation}
+
 Color interpolation is the process of creating new colors by mixing two or more colors together. It is a common technique used in computer graphics and digital image processing to create smooth transitions between colors.
 
 Color interpolation works by calculating the intermediate colors between two or more given colors. This is typically done by taking a weighted average of the red, green, and blue values of the colors being interpolated.
@@ -173,51 +194,68 @@ Color interpolation works by calculating the intermediate colors between two or 
 TODO: add math equation + image of red,white and white,blue interpolation
 
 \chapter{Visualizing molecular data}
+\label{chapter:visualizing_molecular_data}
+
 This chapter will discuss various types of visualizations, the role of coloring in molecular representations, and some commonly used software tools for creating these visualizations.
 
 \section{Types of visualizations}
+\label{section:types_of_visualizations}
+
 There are several methods to represent molecular data, each with its own benefits and drawbacks. The methods most relevant to this work are the following three types: ball and stick, surface, and cartoon.
 
 \subsection{Ball and stick}
+\label{subsection:ball_and_stick}
+
 The ball and stick model represents atoms as spheres and bonds as cylindrical connections between these spheres. This model provides a simple and intuitive visualization of a molecule's atomic structure. It highlights individual atoms and their bonds, including their bond types. However, it may not accurately represent the spatial relationships between atoms in larger molecules or macromolecular complexes.
 
 \subsection{Surface}
+\label{subsection:surface}
+
 Surface representations depict the three-dimensional shape of a molecule by displaying its solvent-accessible surface.
 This model provides a more accurate representation of the molecule's overall shape and size, making it especially useful for studying macromolecular interactions and the binding of small molecules.
 For example, surface visualization can be used to identify potential binding sites on a protein surface, which can then be targeted by drug molecules.
 
 \subsection{Cartoon}
+\label{subsection:cartoon}
+
 Cartoon representations simplify the molecular structure by focusing on the secondary structure elements of proteins and nucleic acids, such as alpha helices, beta sheets, and loops. Alpha helices are often depicted as a spiral-like structures, whereas beta sheets as arrows. This type of visualization is particularly useful for visualizing large macromolecular complexes, as it highlights the overall organization and topology of the molecule without the clutter of atomic details. The simplification of the structure also makes it easier to understand the folding and dynamics of the molecule.
 
 \subsection{Coloring of molecular visualizations}
+\label{subsection:coloring_of_molecular_visualizations}
+
 Coloring is an essential aspect of molecular visualization, as it can provide additional information and help to emphasize specific features or properties of the molecule. Some common coloring schemes include:
 - By element: Atoms are colored according to their chemical element (e.g., carbon in grey, oxygen in red, nitrogen in blue).
 - By partial atomic charge: Atoms or residues are colored according to their charge or charge sum. Negative charges are depicted in red, positive charges in blue.
 
 \section{Visualization software}
+\label{section:visualization_software}
+
 There are numerous software tools available for visualizing molecular data, with varying levels of complexity, customization, and features. Two widely used tools are LiteMol and Mol*.
 
 \subsection{Litemol}
+\label{subsection:litemol}
+
 LiteMol is an open-source, web-native molecular visualization tool that supports various file formats and offers a user-friendly interface for creating visualizations. LiteMol provides essential visualization types, including ball and stick, surface, and cartoon representations, as well as options for customizing colors, lighting, and other display settings. The web-based nature of LiteMol makes it easily accessible and platform-independent.
 
 \subsection{Molstar}
+\label{subsection:molstar}
+
 Mol* (Molstar) is another web-native molecular visualization tool, developed as part of the wwPDB OneDep system for macromolecular structure deposition and validation. Mol* offers a wide range of visualization options, including advanced features such as electron density maps and validation reports. Mol* supports many file formats, including PDB, mmCIF, and PDBx/mmJSON. Like LiteMol, Mol* is platform-independent and can be accessed from any web browser.
 
 Mol* emphasizes interactivity and offers various tools for manipulating and analyzing the molecular structure, such as distance and angle measurements, selection and display of specific residues, and custom coloring schemes. Additionally, Mol* provides integration with external databases and services, such as UniProt, PDBe, and RCSB PDB, enabling users to quickly access related information and resources.
 
-TODO: add screenshots of Molstar in action + add David citations
-
-%%% METHODOLOGY
-
 \chapter{Molstar partial charges extension}
+\label{chapter:molstar_partial_charges_extension}
 
 Visualizing partial atomic charges in molecules is an essential aspect of computational chemistry research, aiding in analyzing complex molecular structures. Molstar, a popular software tool for visualizing molecules, provides an extensive range of features for users to explore molecular structures. However, the tool lacks the functionality to color and label atoms and residues based on their partial atomic charges. This can be a significant limitation for researchers. In response to this need, we have created an extension to Molstar that addresses this limitation.
 
 This chapter describes the requirements for the extension, the custom mmCIF categories necessary for storing the partial atomic charges, and the implementation of the extension itself.
 
 \section{Requirements}
+\label{section:requirements}
 
 This section briefly describes the formal requirements for the Molstar extension. Firstly, the extension should enable the coloring of atoms and residues based on their partial atomic charges. Secondly, it should describe the charge values of the atoms and residues. Lastly, the extension should be seamlessly integrated into the Molstar library, facilitating access to its features regardless of the Molstar viewer instance.
+TODO: the extension should also support multiple charges sets
 
 \section{Custom mmCIF categories}
 \label{section:custom_mmcif_categories}
@@ -256,6 +294,7 @@ Figure \ref{fig:mmcif_erd} provides a detailed illustration of the structure of 
 \end{figure}
 
 \section{Implementation}
+\label{section:implementation}
 
 This section will detail the implementation of the extension. The extension consists of multiple providers that are registered in a global registry. Each provider serves a distinct purpose, which will be described in the following subsections.
 
@@ -293,6 +332,7 @@ The residue charges are calculated by summing the charges of the atoms that make
 Lastly, the maximum absolute charge of both atoms and residues is calculated and stored in the \texttt{maxAbsoluteChargesAll} map and the method name used to calculate the charges of a given charge set is stored in the \texttt{typeIdToMethod} map.
 
 \subsection{Partial charges color theme}
+\label{subsection:partial_charges_color_theme}
 
 This provider serves as the central component of the extension, with its primary function being to assign colors to atoms and residues based on their charges. It achieves this by using the ColorTheme API provided by Molstar. The ColorTheme API is a mechanism for assigning colors to structural elements of a molecule. These structural elements can be atoms, residues, bonds, and so on. The API is based on the concept of a ColorTheme object, which is a collection of color assignments for structural elements. The ColorTheme object is then used by the Molstar library to color the structural elements of the molecule.
 
@@ -301,6 +341,7 @@ For the purposes of this extension, it was necessary to color two structural ele
 To establish the color for a given charge, two color interpolations are employed: one for negative charges and another for positive charges. Atoms with positive charges receive a color from a white-to-blue color interpolation, while atoms with negative charges are assigned a color from a white-to-red color interpolation. These color interpolations are highlighted in Figure \ref{todo}. 
 
 \subsection{Labels}
+\label{subsection:labels}
 
 Having colored the structural elements, it was also necessary to create a label provider, which would assign labels that describe the charge of the structural element. In order to determine which element is highlighted, Molstar uses the object Loci. A Loci object is utilized for general selections and highlights. Consequently, it is essential to first extract the location from the Loci object in order to obtain the atom ID. The charge is acquired from the property provider, and the label is an HTML string that conveys the charge of the atom or residue. An example of the label can be seen in in the right-hand corner in figure \ref{}.
 
@@ -323,12 +364,20 @@ In addition to creating the partial atomic charges extension for Molstar, it was
 The viewer needs extended functionality
 
 \chapter{Atomic Charge Calculator II}
+\label{chapter:atomic_charge_calculator_ii}
+
+Atomic Charge Calculator II (ACC2) is a web application for calculating and visualizing partial atomic charges. ACC2 uses the Litemol viewer for visualizing the structures and their partial atomic charges. The viewer is sufficient in visualizing a single charge set, however, it was desired to expand this capability to support multiple charge sets. This is why it was desirable to update the viewer with its modern counterpart Molstar, which has this capabilty provided through the partial atomic charges extension described in chapter \ref{}.
+
+This chapter discusses the necessary changes made to the ACC2 web application in order to update the viewer from the Litemol viewer to the Molstar viewer. Firstly, we discuss the extensions made to the ChargeFW2 output, then we will look at the Flask backend changes for supporting multiple charges, and lastly we will mention a couple of frontend changes that were made to support generating multiple charge set calculations.
 
 \section{ChargeFW2 extension}
+\label{section:chargefw2_extension}
 
-To accommodate the specified output file format for Molstar, ChargeFW2 required an extension that would output a single mmCIF file containing both the molecular structure and charges. The charges were appended to the end of the file.
+As mentioned in subsection \ref{}, ChargeFW2 is a C++ application for calculating partial atomic charges.
+To accommodate the specified output file format discussed in section, ChargeFW2 required an extension that would output a single mmCIF file containing both the molecular structure and charges. The charges were appended to the end of the file.jop
 
 \section{Multicharge support}
+\label{section:multicharge_support}
 
 \subsection{Backend}
 
@@ -337,10 +386,10 @@ To accommodate the specified output file format for Molstar, ChargeFW2 required 
 \section{Molstar viewer integration}
 
 \chapter{AlphaCharges}
-\section{Viewer extension}
-\section{Molstar viewer integration}
 
-%%% CONCLUSION
+\section{Viewer extension}
+
+\section{Molstar viewer integration}
 
 \chapter*{Conclusion}
 \markright{\textsc{Conclusion}}
